--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 /Clases/build/
 /Metodos/nbproject/private/
 /Metodos/build/
+/Metodos_this/nbproject/private/
+/Metodos_this/build/
+/Ejercicios_Metodos/nbproject/private/
+/Ejercicios_Metodos/build/
+/Ejercicio_Metodos_IVA/nbproject/private/
+/Ejercicio_Metodos_IVA/build/
+/Ejercicio_Metodos_Calculadora/nbproject/private/
+/Ejercicio_Metodos_Calculadora/build/
