--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /Ejercicio_Metodos_IVA/build/
 /Ejercicio_Metodos_Calculadora/nbproject/private/
 /Ejercicio_Metodos_Calculadora/build/
+/Constructores/nbproject/private/
+/Constructores/build/
+/Constructores_Parametros/nbproject/private/
+/Constructores_Parametros/build/
+/Constructores_Sobrecarga/nbproject/private/
